# chunkifypy

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/ChunkifyPy/: chunkify.py
